# MarkerBasedNavigation_Orocos

./: README.md  run_youbot_trajectoryGenerator_amcl_rViz.sh
BRICS_RN/AmclBergamo/: CMakeLists.txt  manifest.xml  solution.xml
BRICS_RN/AmclBergamo/src/: AmclBergamo.cpp  AmclBergamo.hpp  amcl.cpp  amcl.hpp  amcl_node_original.cpp
BRICS_RN/Applications/: CMakeLists.txt  manifest.xml  run_markerLocator.sh  run_simulator_application_test.sh  run_simulator_trajectoryGenerator_rViz.sh  run_youbot_markerCoordinator_corba_rViz.sh  run_youbot_markerCoordinator_rViz.sh  run_youbot_markerPathPlanner_rViz.sh  run_youbot_markerSearcher_rViz.sh  run_youbot_pathPlanner_rViz.sh
BRICS_RN/Applications/launch/: youbot_base_joint_state_publisher.launch
BRICS_RN/Applications/maps/: arenaBergamo.pgm  arenaBergamo.yaml
BRICS_RN/Applications/markerPaths/: pathA1_A2.yaml  pathA2_A1.yaml
BRICS_RN/Applications/models/: youbot_camera_holder.urdf
BRICS_RN/Applications/properties/: Coordinator.cpf  MarkerLocator.cpf  MarkerPathPlanner.cpf  PathPlanner.cpf  RGBCameraOpenCv.cpf  Slam.cpf  TrajectoryAdapter.cpf  TrajectoryFollower.cpf  TrajectoryGenerator.cpf  WorldModel.cpf  YoubotSimulatorDriver.cpf
BRICS_RN/Applications/solutions/: markerLocator.xml  simulator_application_test.xml  simulator_trajectoryGenerator_rViz.xml  youbot_markerCoordinator_corba_rViz.xml  youbot_markerCoordinator_rViz.xml  youbot_markerPathPlanner_rViz.xml  youbot_markerSearcher_rViz.xml  youbot_pathPlanner_rViz.xml  youbot_trajectoryGenerator_amcl_rViz.xml
BRICS_RN/Coordinator/: CMakeLists.txt  manifest.xml  solution_single.xml
BRICS_RN/Coordinator/include/Coordinator/: Coordinator.hpp  CoordinatorComponent.hpp
BRICS_RN/Coordinator/properties/: Coordinator.cpf
BRICS_RN/Coordinator/src/: Coordinator.cpp  CoordinatorComponent.cpp
BRICS_RN/GoalPublisher/: CMakeLists.txt  manifest.xml
BRICS_RN/GoalPublisher/include/GoalPublisher/: GoalPublisher.hpp
BRICS_RN/GoalPublisher/src/: GoalPublisher.cpp
BRICS_RN/MarkerLocator/: CMakeLists.txt  manifest.xml  solution.xml
BRICS_RN/MarkerLocator/camera/: microsoft_lifecam_vx-2000.cal  no_distortion.cal
BRICS_RN/MarkerLocator/include/MarkerLocator/: MarkerLocatorComponent.hpp
BRICS_RN/MarkerLocator/properties/: MarkerLocator.cpf
BRICS_RN/MarkerLocator/src/: MarkerLocatorComponent.cpp
BRICS_RN/MarkerPathIterator/: CMakeLists.txt  manifest.xml
BRICS_RN/MarkerPathIterator/properties/: MarkerPathIterator.cpf
BRICS_RN/MarkerPathIterator/src/: MarkerPathIteratorComponent.cpp
BRICS_RN/MarkerPathPlanner/: CMakeLists.txt  manifest.xml  solution.xml
BRICS_RN/MarkerPathPlanner/properties/: MarkerPathPlanner.cpf
BRICS_RN/MarkerPathPlanner/src/: MarkerPathPlannerComponent.cpp
BRICS_RN/MarkerSearcher/: CMakeLists.txt  manifest.xml  solution.xml
BRICS_RN/MarkerSearcher/include/MarkerSearcher/: MarkerSearcherComponent.hpp
BRICS_RN/MarkerSearcher/properties/: MarkerSearcher.cpf
BRICS_RN/MarkerSearcher/src/: MarkerSearcherComponent.cpp
BRICS_RN/PathPlanner/: CMakeLists.txt  manifest.xml  rosdep.yaml
BRICS_RN/PathPlanner/include/PathPlanner/: PathPlanner.hpp
BRICS_RN/PathPlanner/properties/: PathPlanner.cpf
BRICS_RN/PathPlanner/src/: PathPlanner.cpp
BRICS_RN/PathPlanner/src/rtt/: map.c  optmain.c  optsystem.c  optsystem.h  opttree.c  opttree.h
BRICS_RN/Slam/: CMakeLists.txt  README  manifest.xml  solution_single.xml
BRICS_RN/Slam/include/Slam/: Converter.hpp  Slam.hpp  thresholdFilter.hpp
BRICS_RN/Slam/properties/: Slam.cpf
BRICS_RN/Slam/src/: Converter.cpp  Slam.cpp  thresholdFilter.cpp
BRICS_RN/TrajectoryAdapter/: CMakeLists.txt  manifest.xml
BRICS_RN/TrajectoryFollower/: CMakeLists.txt  manifest.xml
BRICS_RN/TrajectoryFollower/src/: OmnidriveController.cpp  RampGenerator.cpp  TrajectoryFollower.cpp
BRICS_RN/TrajectoryGenerator/: CMakeLists.txt  manifest.xml
BRICS_RN/TrajectoryGenerator/properties/: TrajectoryGenerator.cpf
BRICS_RN/TrajectoryGenerator/src/: TrajectoryGenerator.cpp
BRICS_RN/WorldModel/: CMakeLists.txt  manifest.xml  rosdep.yaml  run.sh  solution.xml
BRICS_RN/WorldModel/include/WorldModel/: TestComponent.hpp  WorldModel.hpp
BRICS_RN/WorldModel/maps/: arenaBergamo.pgm  arenaBergamo.yaml  arenaBergamoDescription.yaml  mapDescription.yaml  testmap.yaml
BRICS_RN/WorldModel/properties/: WorldModel.cpf
BRICS_RN/WorldModel/src/: MapGenerator.cpp  TestComponent.cpp  WorldModel.cpp
BRICS_RN/mbn_common/: mainpage.dox
Drivers/HokuyoDriver/: CMakeLists.txt  manifest.xml  solution.xml
Drivers/HokuyoDriver/include/HokuyoDriver/: HokuyoDriver.hpp  HokuyoDriverComponent.hpp
Drivers/HokuyoDriver/properties/: HokuyoDriver.cpf
Drivers/HokuyoDriver/src/: HokuyoDriver.cpp  HokuyoDriverComponent.cpp  hokuyo.cpp
Drivers/RGBCameraDriver/: CMakeLists.txt  manifest.xml  solution.xml
Drivers/RGBCameraDriver/include/RGBCameraDriver/: RGBCameraDriverComponent.hpp
Drivers/RGBCameraDriver/properties/: RGBCameraOpenCv.cpf
Drivers/RGBCameraDriver/src/: RGBCameraDriverComponent.cpp
Drivers/YoubotDriverBergamo/: CMakeLists.txt  manifest.xml  run.sh  runCorba.sh  solution.xml
Drivers/YoubotDriverBergamo/lua/: calibration_fsm.lua  youbot_test.lua
Drivers/YoubotDriverBergamo/properties/: YoubotDriver.cpf
Drivers/YoubotDriverBergamo/src/: YoubotDriver.cpp  youbot_helpers.cpp  youbot_plugin.cpp
Drivers/youbot_driver_rtt/src/: youbot_arm_service.cpp  youbot_arm_service.hpp  youbot_base_service.cpp  youbot_base_service.hpp  youbot_driver_component_complete.cpp  youbot_driver_component_complete.hpp  youbot_types.hpp
msgs/: createBricsRnRttMsgs.sh
msgs/brics_rn_msgs/: manifest.xml
msgs/brics_rn_msgs/msg/: Acceleration.msg  JointPositionsStamped.msg  JointVelocitiesStamped.msg  TwistAndAcceleration.msg  Velocity.msg  Waypoint.msg
msgs/rtt_brics_actuator_msgs/: CMakeLists.txt  manifest.xml
msgs/rtt_motion_control_msgs/: manifest.xml
msgs/rtt_youbot_msgs/: CMakeLists.txt  manifest.xml
msgs/youbot_msgs/: manifest.xml
msgs/youbot_msgs/msg/: driver_state.msg  error_count.msg  motor_state.msg  motor_states.msg
(+9 files in other folders)
